# snapout

./: .gitignore  LICENSE  README.md  pyproject.toml  snapout
src/snapout/: __init__.py  __main__.py  application.py  cli.py  core.py  ui.py
