[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snapout"
version = "0.1.0"
description = "SnapOut! - Snap Package Cleanup Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []  # Add any dependencies here if needed

[project.scripts]
snapout = "snapout.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]